# AIWorkflow

./: .gitignore
.claude/: settings.json
.claude/agents/: agent-1769009039334.md  agent-1769009485869.md  agent-1769009591011.md  agent-1769009820454.md
.claude/commands/: daily-task-workflow.md
.specify/memory/: constitution.md
app/compute_engine/: Cargo.toml
app/compute_engine/src/: main.rs
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.jsx
industry_sentiment/backend/: main.py  requirements.txt
industry_sentiment/backend/sql/: init_db.sql
industry_sentiment/backend/src/: collector.py
